fixed some alignment issues and added footer

--- a/src/styles/template-styles.css
+++ b/src/styles/template-styles.css
@@ -32,18 +32,18 @@ body {
   /* align-items: center; */
 }
 
+header,
+footer {
+  width: 100%;
+  padding-inline: min(16px, 3%);
+  padding-block: min(16px, 2%);
+}
+
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 2px solid yellow;
-}
-
-header,
-footer {
-  width: 100%;
-  padding-inline: min(30px, 3%);
-  padding-block: min(16px, 2%);
+  border-bottom: 2px solid var(--line-clr);
 }
 
 header .logo-container {
@@ -72,36 +72,13 @@ header .logo-container {
   list-style: none;
 }
 
-main {
-  padding-inline: min(30px, 3%);
-  padding-block: 0.2rem;
-
-  margin-inline: 2rem;
-  margin-block-start: 2rem;
-
-  border: 1px solid green;
-}
-
-.main-header-container {
-  /* height: 50px; */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  /* padding-block-end: 2rem; */
-  padding-inline: min(24px, 2.4%);
-  padding-block: 0.5rem;
-  /* border-bottom: 2px solid var(--line-clr); */
-  margin-block-end: 1.6rem;
-  border-radius: 1rem;
-}
-
 label[for="base-colour-input"] {
   background-color: var(--surface-clr);
   padding: 0.7rem 1rem;
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   /* cursor: pointer; */
   border: 1px solid var(--line-clr);
   box-shadow: 0 0 0 1px color-mix(in oklch, var(--line-clr) 90%, transparent),
@@ -112,14 +89,19 @@ label[for="base-colour-input"] {
   width: 2rem;
   height: 2rem;
   background: none;
-  border: 1px solid var(--hover-clr);
+  border: 1px solid var(--line-clr);
   border-radius: 0.2rem;
   cursor: pointer;
 }
 
-.main-title {
-  font-size: 1.6rem;
-  font-weight: bold;
+main {
+  padding-inline: min(30px, 3%);
+  padding-block: 0.2rem;
+
+  margin-inline: min(32px, 3%);
+  margin-block: 1rem;
+
+  border: 1px solid green;
 }
 
 .container {
@@ -140,6 +122,10 @@ label[for="base-colour-input"] {
   p {
     margin-top: 1rem;
   }
+}
+
+footer {
+  border-top: 2px solid var(--line-clr);
 }
 
 @media (max-width: 800px) {
